# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  mise.toml  pyproject.toml
.github/workflows/: release.yml
src/pre_commit_hooks/: __init__.py  eslint_fix.py
tests/: eslint_fix_test.py
