[project]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MuXiu1997", email = "muxiu1997@muxiu1997.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
